# tinygpt

./: .gitignore  README.md  dataset.txt  main.py  pyproject.toml
tlm/: __init__.py  attention.py  data.py  dataset.py  encode.py  gpt.py  log.py  types.py
